; ModuleID = '/home/carl/AnghaBench/linux/drivers/uio/extr_uio.c_portio_name_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/uio/extr_uio.c_portio_name_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uio_port = type { i8* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uio_port*, i8*)* @portio_name_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @portio_name_show(%struct.uio_port* %0, i8* %1) #0 {
  %3 = alloca %struct.uio_port*, align 8
  %4 = alloca i8*, align 8
  store %struct.uio_port* %0, %struct.uio_port** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.uio_port*, %struct.uio_port** %3, align 8
  %6 = getelementptr inbounds %struct.uio_port, %struct.uio_port* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i64 @unlikely(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.uio_port*, %struct.uio_port** %3, align 8
  %15 = getelementptr inbounds %struct.uio_port, %struct.uio_port* %14, i32 0, i32 0
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %15, align 8
  br label %16

16:                                               ; preds = %13, %2
  %17 = load i8*, i8** %4, align 8
  %18 = load %struct.uio_port*, %struct.uio_port** %3, align 8
  %19 = getelementptr inbounds %struct.uio_port, %struct.uio_port* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @sprintf(i8* %17, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  ret i32 %21
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
